# serveit

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deno.json  go.mod  go.sum  lefthook.yml  main.go  taskfile.yaml
.build-tools/: download-zig.sh  install-zigbuild.sh
.cargo/: config.toml
.github/scripts/: install-tooling.sh
.github/workflows/: build.yaml  publish.yaml
build-tools/: rust.yaml  taskfile.docker.yaml  taskfile.rust.yaml
build-tools/docker/: init-builder.sh  taskfile.yaml
pkg/errs/: errors.go  errors_test.go
pkg/logger/: logger.go
pkg/server/: entry.go  request.go  server.go
pkg/util/: hex.ts  hex_test.ts
src/: app.rs  config.rs  config.ts  constants.ts  errors.ts  file-entry.ts  file-server.ts  file.ts  logger.ts  main.rs  main.ts  meta-server.ts  server.ts  types.ts
src/files/: cache.ts  entry.ts  server.ts
src/meta/: basics.ts  health.ts  meta-server.ts  metrics.ts  server.ts
src/util/: hex.ts  log.ts
test/: bound-spy.ts  config.test.ts  config_test.ts  deps.ts  errors.test.ts  file-entry.test.ts  file-server.test.ts  file_test.ts  logger.test.ts  main.test.ts  meta-server.test.ts  server_test.ts  setup.ts
test/files/: cache.test.ts  common.ts  entry.test.ts  server.test.ts
test/meta/: health.test.ts  meta-server.test.ts  metrics.test.ts
test/util/: hex_test.ts  log_test.ts
util/: hex_test.ts
